Add square grids

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <script src="./script.js" defer></script>
     </head>
     <body>
-        
+        <h2 class="grid-title">Sketch Pad</h2>
+        <h3 class="grid-display-size">N x N Grid</h3>
+        <div class="grid-container">
+
+        </div>
     </body>
 </html>
