--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <body>
         <h2 class="grid-title">Sketch Pad</h2>
         <h3 class="grid-display-size">N x N Grid</h3>
-        <div class="grid-container">
-
+        <div class="grid-button">
+            <button id="new-grid">New Grid</button>
+            <button id="clear-grid">Clear All</button>
+            <button id="switch-hover">Switch Hover - Hold</button>
         </div>
+        <div class="grid-container"></div>
     </body>
 </html>
