Disable user select/highlight

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="grid-button">
             <button id="new-grid">New Grid</button>
             <button id="clear-grid">Clear All</button>
-            <button id="switch-hover">Switch Hover - Hold</button>
+            <button id="switch-hover">Switch Hover / Hover+Hold</button>
         </div>
         <div class="grid-container"></div>
     </body>
