Add random color switch function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button id="new-grid">New Grid</button>
             <button id="clear-grid">Clear All</button>
             <button id="switch-hover">Switch Hover / Hover+Hold</button>
+            <button id="random-color">Use Random Color</button>
         </div>
         <div class="grid-container"></div>
     </body>
